CHANGES
=======

0.3.0
-----
* Implement DEPS for VTask declarative dependencies
* Declarative Counters and Samples support
* "name" is no longer required for declarative options
* Add blocking getValue(timeout=None) to PollerTask
* bugfix for subclasses in VService.requireTask() and .getTask()
* bugfix in runit support

0.2.3
-----
* Implemented PollerTask
* Support runit installation if psutil is installed
* bugfix in PeriodicTask when calculating sleep times


0.2.2.2
-------
* Remove unittests from distro

0.2.2.1
-------
* Support building/installing via pip

0.2.2
-----
* Add new DBusServiceTask::addHandlers() to make it easier to add handlers 
* Fix TornadoTask to support binding multiple interfaces properly
* Add deferred / callback support to QueueTask
* Support binding TornadoTask to a UNIX socket

0.2.1
-----
* Hooks to improve dbus extensibility

0.2.0
-----
* Export FB303 over dbus
* Implemented various other sparts-specific services for dbus
* Some dbus API changes since 0.1.4 (forcing a minor version update)

0.1.4
-----
* dbus tasks

0.1.3
-----
* task "workers" attribute to set number of worker threads
* new task, sparts.tasks.queue.QueueTask
* tweak thread name based on number of workers, worker id

0.1.2
-----
* reverse task stop order
* improved ipv6 / multi-if support for HTTP
* twisted reactor, base twisted tasks
* re-generate (fb303) thrift bindings during setup.py build
* argparse instantiation tweaks
* serveBG() service method
* added unittests